# Mean-Shift-and-SCMS

./: README.md
mean-shift-scms-demo-en/: README.md  pyproject.toml
mean-shift-scms-demo-en/examples/: run_2d.py  run_3d.py  run_all.py
mean-shift-scms-demo-en/src/density_ridges/: __init__.py  algorithms.py  synthetic.py
mean-shift-scms-demo-en/tests/: test_algorithms.py
